Major update: Add game screenshots, MR features, Chinese name, and disable auto-translation
- Add 5 real game screenshots with interactive preview modal
- Add MR (Mixed Reality) feature highlights and descriptions
- Add Chinese game name '羽毛球大战' to Chinese version
- Update screenshot descriptions to highlight MR technology
- Disable auto-translation for English version
- Enhance responsive design for mobile devices
- Update SEO metadata with MR keywords
- Restructure CSS and JavaScript into separate files

--- a/index-en.html
+++ b/index-en.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" translate="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google" content="notranslate">
+    <meta name="google" content="translate=no">
+    <meta http-equiv="Content-Language" content="en">
     <meta name="description" content="Badminton Battle - An immersive VR badminton game. Experience realistic badminton in the virtual world. Supports PICO and Meta devices.">
     <meta name="keywords" content="VR, Badminton, PICO, Meta, Game, Sports">
-    <title>Badminton Battle - VR Badminton Game</title>
+    <title>Badminton Battle - VR/MR Badminton Game</title>
+    <meta name="description" content="Badminton Battle - Revolutionary VR/MR badminton game supporting both virtual reality and mixed reality modes. Experience immersive sports with virtual courts overlaid in real environments. Compatible with PICO and Meta devices.">
+    <meta name="keywords" content="VR, MR, Mixed Reality, Badminton, PICO, Meta, Game, Sports, Virtual Reality">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body translate="no">
     <header>
         <div class="language-switcher">
             <a href="index.html">中文</a>
@@ -16,8 +21,8 @@
         </div>
         <div class="container">
             <div class="header-content">
-                <h1>Badminton Battle</h1>
-                <p class="subtitle">Immersive VR Badminton Experience - Swing Your Way to Victory!</p>
+                <h1 translate="no">Badminton Battle</h1>
+                <p class="subtitle">Immersive VR/MR Badminton Experience - Perfect Blend of Virtual and Reality!</p>
                 <div class="cta-buttons">
                     <a href="#download" class="btn btn-primary">
                         🏪 Download Now
@@ -30,14 +35,14 @@
         </div>
     </header>
 
-    <main>
+    <main class="notranslate">
         <div class="container">
             <section class="section" id="about">
                 <h2>About the Game</h2>
                 <p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto; color: #555;">
-                    Badminton Battle is a revolutionary VR badminton game that delivers an unprecedented immersive sports experience. 
-                    Through cutting-edge VR technology, you can engage in intense matches against AI opponents or global players 
-                    on virtual courts, experiencing the authentic charm of badminton sports anytime and anywhere.
+                    Badminton Battle is a revolutionary VR/MR badminton game that delivers an unprecedented immersive sports experience. 
+                    Through cutting-edge VR and MR technology, you can not only engage in intense virtual court battles, but also experience mixed reality badminton in real environments, 
+                    bringing the authentic charm of badminton sports anytime and anywhere.
                 </p>
             </section>
 
@@ -74,23 +79,36 @@
                         <h3>Statistics Tracking</h3>
                         <p>Detailed game statistics track your progress, analyze strengths and weaknesses, and continuously improve your skills.</p>
                     </div>
+                    <div class="feature-card">
+                        <div class="feature-icon">🌐</div>
+                        <h3>MR Mixed Reality</h3>
+                        <p>Breakthrough MR technology overlays virtual courts in real environments, or blends reality with virtual scenes for unprecedented immersive experiences.</p>
+                    </div>
                 </div>
             </section>
 
             <section class="section" id="screenshots">
                 <h2>Game Screenshots</h2>
                 <div class="screenshot-grid">
-                    <div class="screenshot-placeholder">
-                        Main Menu
+                    <div class="screenshot-item">
+                        <img src="screenshot1.jpg" alt="Tropical Beach Scene - Enjoy badminton in a beautiful beach environment">
+                        <div class="screenshot-caption">Tropical Beach Scene</div>
                     </div>
-                    <div class="screenshot-placeholder">
-                        Battle Scene
+                    <div class="screenshot-item">
+                        <img src="screenshot2.jpg" alt="Physics Trajectory Display - Advanced physics engine showing shuttlecock flight path">
+                        <div class="screenshot-caption">Realistic Physics Trajectory</div>
                     </div>
-                    <div class="screenshot-placeholder">
-                        Training Mode
+                    <div class="screenshot-item">
+                        <img src="screenshot3.jpg" alt="International Tournament Mode - Experience the intense atmosphere of professional badminton matches">
+                        <div class="screenshot-caption">International Tournament Mode</div>
                     </div>
-                    <div class="screenshot-placeholder">
-                        Multiplayer Game
+                    <div class="screenshot-item">
+                        <img src="screenshot4.jpg" alt="MR Forest Scene - Perfect blend of reality and virtual forest environment in mixed reality">
+                        <div class="screenshot-caption">MR Forest Scene</div>
+                    </div>
+                    <div class="screenshot-item">
+                        <img src="screenshot5.jpg" alt="MR Real Court - Mixed reality technology overlaying virtual badminton court in real environment">
+                        <div class="screenshot-caption">MR Real Court</div>
                     </div>
                 </div>
             </section>
