--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Badminton Battle - 一款沉浸式VR羽毛球游戏，在虚拟世界中体验真实的羽毛球运动。支持PICO和Meta设备。">
-    <meta name="keywords" content="VR, 羽毛球, Badminton, PICO, Meta, 游戏, Sports">
-    <title>Badminton Battle - VR羽毛球游戏</title>
+    <meta name="description" content="Badminton Battle 羽毛球大战 - 革命性的VR/MR羽毛球游戏，支持虚拟现实和混合现实模式。在真实环境中叠加虚拟球场，体验前所未有的沉浸式运动。支持PICO和Meta设备。">
+    <meta name="keywords" content="VR, MR, 混合现实, 羽毛球, 羽毛球大战, Badminton Battle, PICO, Meta, 游戏, Sports, Mixed Reality">
+    <title>Badminton Battle 羽毛球大战 - VR/MR羽毛球游戏</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -17,7 +17,8 @@
         <div class="container">
             <div class="header-content">
                 <h1>Badminton Battle</h1>
-                <p class="subtitle">沉浸式VR羽毛球体验 - 让您在虚拟世界中挥洒汗水！</p>
+                <h2 class="chinese-title">羽毛球大战</h2>
+                <p class="subtitle">沉浸式VR/MR羽毛球体验 - 虚拟与现实完美融合，让您挥洒汗水！</p>
                 <div class="cta-buttons">
                     <a href="#download" class="btn btn-primary">
                         🏪 立即下载
@@ -35,8 +36,8 @@
             <section class="section" id="about">
                 <h2>关于游戏</h2>
                 <p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto; color: #555;">
-                    Badminton Battle 是一款革命性的VR羽毛球游戏，为您带来前所未有的沉浸式运动体验。
-                    通过先进的VR技术，您可以在虚拟球场上与AI对手或全球玩家进行激烈对战，
+                    Badminton Battle（羽毛球大战）是一款革命性的VR/MR羽毛球游戏，为您带来前所未有的沉浸式运动体验。
+                    通过先进的VR和MR技术，您不仅可以在虚拟球场上激烈对战，还能在现实环境中体验混合现实羽毛球，
                     感受真实的羽毛球运动魅力，无论何时何地都能享受运动的乐趣。
                 </p>
             </section>
@@ -74,23 +75,36 @@
                         <h3>数据统计</h3>
                         <p>详细的游戏数据统计，追踪您的进步历程，分析强弱项，持续提升技能。</p>
                     </div>
+                    <div class="feature-card">
+                        <div class="feature-icon">🌐</div>
+                        <h3>MR混合现实</h3>
+                        <p>突破性的MR技术，在真实环境中叠加虚拟球场，或融合现实与虚拟场景，带来前所未有的沉浸体验。</p>
+                    </div>
                 </div>
             </section>
 
             <section class="section" id="screenshots">
                 <h2>游戏截图</h2>
                 <div class="screenshot-grid">
-                    <div class="screenshot-placeholder">
-                        游戏主界面
+                    <div class="screenshot-item">
+                        <img src="screenshot1.jpg" alt="热带海滩场景 - 在美丽的海滩环境中享受羽毛球乐趣">
+                        <div class="screenshot-caption">热带海滩场景</div>
                     </div>
-                    <div class="screenshot-placeholder">
-                        对战场景
+                    <div class="screenshot-item">
+                        <img src="screenshot2.jpg" alt="物理轨迹显示 - 先进的物理引擎展示羽毛球飞行轨迹">
+                        <div class="screenshot-caption">真实物理轨迹</div>
                     </div>
-                    <div class="screenshot-placeholder">
-                        训练模式
+                    <div class="screenshot-item">
+                        <img src="screenshot3.jpg" alt="国际赛事模式 - 体验专业羽毛球比赛的激烈氛围">
+                        <div class="screenshot-caption">国际赛事模式</div>
                     </div>
-                    <div class="screenshot-placeholder">
-                        多人游戏
+                    <div class="screenshot-item">
+                        <img src="screenshot4.jpg" alt="MR森林场景 - 现实与虚拟森林环境完美融合的混合现实体验">
+                        <div class="screenshot-caption">MR森林场景</div>
+                    </div>
+                    <div class="screenshot-item">
+                        <img src="screenshot5.jpg" alt="MR现实球场 - 在真实环境中叠加虚拟羽毛球场的混合现实技术">
+                        <div class="screenshot-caption">MR现实球场</div>
                     </div>
                 </div>
             </section>
