--- a/index-en.html
+++ b/index-en.html
@@ -146,7 +146,7 @@
                 <div class="footer-section">
                     <h3>Contact Us</h3>
                     <ul class="contact-info">
-                        <li>📧 contact@example.com</li>
+                        <li>📧 chunjunliang@outlook.com</li>
                         <li>🌐 https://example.com</li>
                         <li>📱 Follow us on social media</li>
                     </ul>
